# mpm_GTrace_gen

./: .gitignore  CLAUDE.md  QUICK_START.md  README.md  SMART_HOME_EXAMPLE.md  TRACE_VISUALIZATION_GUIDE.md  WIRELESS_SENSOR_NETWORK_EXAMPLE.md  generate_global_trace.py  pyproject.toml
.claude/: settings.local.json
docs/: WSN_Region_Trace_Explanation.md
output_g_trace/: WSN_region_trace.html
src_artifacts/: MPM_trace_example.xml  WSN_element_trace.xml  WSN_region_trace.xml  metaModel.xml  mpm_4_levels_trace.xml  mpm_example_test_more_trans.xml  smart_building_5_levels_trace.xml  smart_building_multi_exec_trace.xml.backup  smart_building_simple.xml  smart_home.xml  wireless_sensor_network.xml
