[project]
name = "mpm-trace-gtrace-gen"
version = "0.1.0"
description = "Global Trace Generator for CPS Traceability Framework"
readme = "CLAUDE.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
generate-global-trace = "generate_global_trace:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
include = ["generate_global_trace.py"]
